--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
     </head>
     <body>
         <header></header>
-        <main></main>
+        <main>
+            <section class="container clearfix">
+                <div>
+                    <h1>Meet Our Teem</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae impedit voluptatem deserunt quidem, dolor nobis accusantium sit, esse rerum maiores adipisci quibusdam! Quae omnis nisi autem ipsum sunt voluptatibus modi.</p>
+                    <!-- Parte con Float -->
+                    <div class="col-assets"></div>
+                    <div class="col-assets"></div>
+                    <div class="col-assets"></div>
+                    <div class="col-assets"></div>
+                    <div class="col-assets"></div>
+                    <div class="col-assets"></div>
+                    <!-- /Parte con Float -->
+                </div>
+            </section>      
+        </main>
         <footer></footer>
     </body>
 </html>
