Aggiunta Prima Scheda

--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
                     <h1>Meet Our Teem</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae impedit voluptatem deserunt quidem, dolor nobis accusantium sit, esse rerum maiores adipisci quibusdam! Quae omnis nisi autem ipsum sunt voluptatibus modi.</p>
                     <!-- Parte con Float -->
-                    <div class="col-assets"></div>
-                    <div class="col-assets"></div>
-                    <div class="col-assets"></div>
-                    <div class="col-assets"></div>
-                    <div class="col-assets"></div>
-                    <div class="col-assets"></div>
+                        <!-- Prima Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/male1.png" alt="Male1">
+                            <div class="images-data">
+                                <h4>MARCO BIANCHI</h4>
+                                <small>Designer<br></small>
+                                <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Prima Scheda -->
+                        <div class="col-assets"></div>
+                        <div class="col-assets"></div>
+                        <div class="col-assets"></div>
+                        <div class="col-assets"></div>
+                        <div class="col-assets"></div>
                     <!-- /Parte con Float -->
                 </div>
             </section>      
