Aggiunto le altre schede

--- a/index.html
+++ b/index.html
@@ -30,11 +30,56 @@
                             </div>
                         </div>
                         <!-- /Prima Scheda -->
-                        <div class="col-assets"></div>
-                        <div class="col-assets"></div>
-                        <div class="col-assets"></div>
-                        <div class="col-assets"></div>
-                        <div class="col-assets"></div>
+                        <!-- Seconda Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/female1.png" alt="Female1">
+                            <div class="images-data">
+                                <h4>LAURA ROSSI</h4>
+                                <small>Front-end Developer<br></small>
+                                <a href="mailto:laurarossi@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Seconda Scheda -->
+                        <!-- Terza Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/male2.png" alt="Male2">
+                            <div class="images-data">
+                                <h4>GIORGIO VERDI</h4>
+                                <small>Back-end Developer<br></small>
+                                <a href="mailto:giorgioverdi@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Terza Scheda -->
+                        <!-- Quarta Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/female2.png" alt="Female2">
+                            <div class="images-data">
+                                <h4>MARTA IPSUM</h4>
+                                <small>SEO Specialist<br></small>
+                                <a href="mailto:martaipsum@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Quarta Scheda -->
+                        <!-- Quinta Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/male3.png" alt="Male3">
+                            <div class="images-data">
+                                <h4>ROBERTO LOREM</h4>
+                                <small>Project Manager<br></small>
+                                <a href="mailto:robertolorem@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Quinta Scheda -->
+                        <!-- Sesta Scheda -->
+                        <div class="col-assets clearfix">
+                            <img src="img/female3.png" alt="Female3">
+                            <div class="images-data">
+                                <h4>DANIELA AMET</h4>
+                                <small>Analyst<br></small>
+                                <a href="mailto:danielaamet@team.com">marcobianchi@team.com</a>
+                            </div>
+                        </div>
+                        <!-- /Sesta Scheda -->
                     <!-- /Parte con Float -->
                 </div>
             </section>      
