--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <title>Floating Cards</title>
     </head>
     <body>
-        <header></header>
+         <header></header> <!--Meglio creare direttamente una section senza lasciare header e footer vuoti -->
         <main>
-            <section class="container clearfix">
+            <section class="container">
                 <div>
                     <h1>Meet Our Teem</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae impedit voluptatem deserunt quidem, dolor nobis accusantium sit, esse rerum maiores adipisci quibusdam! Quae omnis nisi autem ipsum sunt voluptatibus modi.</p>
